--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,10 @@
         <li><a href="#" onclick="showCreateProfileForm()">Create Profile</a></li>
         <li><a href="#" onclick="loadProfiles()">Profiles</a></li>
         <li><a href="#" onclick="loadProfile(selectedProfileId)">Profile</a></li>
-        <li><a href="#" onclick="loadPosts(selectedProfileId)">Posts</a></li>
+        <li><a href="#" onclick="loadUserPosts(selectedProfileId)">User Posts</a></li>
+        <li><a href="#" onclick="loadUserLikedPosts(selectedProfileId)">User Liked Posts</a></li>
+        <li><a href="#" onclick="createPPost(selectedProfileId)">Create Post</a></li>
+        <li><a href="#" onclick="loadAllPosts(selectedProfileId)">ALL Posts</a></li>
         <li><a href="#" onclick="loadNotifications(selectedProfileId)">Notifications</a></li>
     </ul>
 </nav>
