--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,8 @@
         <li><a href="#" onclick="loadUserLikedPosts(selectedProfileId)">User Liked Posts</a></li>
         <li><a href="#" onclick="createPPost(selectedProfileId)">Create Post</a></li>
         <li><a href="#" onclick="loadAllPosts(selectedProfileId)">ALL Posts</a></li>
-        <li><a href="#" onclick="loadNotifications(selectedProfileId)">Notifications</a></li>
+        <li><a href="#" onclick="loadNotifications(selectedProfileId)">Notifications</a>
+        </li>
     </ul>
 </nav>
 <div id="content"></div>
